--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,9 @@
 [submodule "deps/amrl_msgs"]
 	path = deps/amrl_msgs
 	url = https://github.com/ut-amrl/amrl_msgs.git
+[submodule "deps/src/shared"]
+	path = deps/src/shared
+	url = git@github.com:umass-amrl/amrl_shared_lib.git
+[submodule "deps/shared"]
+	path = deps/shared
+	url = git@github.com:umass-amrl/amrl_shared_lib.git
