--- a/package.xml
+++ b/package.xml
@@ -32,5 +32,6 @@
   <exec_depend>ros_type_introspection</exec_depend>
   <exec_depend>topic_tools</exec_depend>
   <exec_depend>message_runtime</exec_depend>
+  <exec_depend>rospy_message_converter</exec_depend>
 
 </package>
