--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>nav_msgs</build_depend>
   <build_depend>ros_type_introspection</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -24,7 +26,8 @@
   <build_depend>message_generation</build_depend>
   <build_depend>genmsg</build_depend>
 
-  <exec_depend>roscpp</exec_depend>
+  <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>nav_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
