first pass at updating old references to new code layout

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
     roslib
     )
 
-#catkin_python_setup()
+catkin_python_setup()
 
 ###################################
 ## catkin specific configuration ##
